# tarea2_redes

./: .gitmodules  CMakeLists.txt  README.md  input_file.txt  resultado_gen.txt
lib/digestpp-master/algorithm/detail/: sha3_provider.hpp
src/: CMakeLists.txt  Client.cpp  Client.h  ClientReceiver.cpp  ClientReceiver.h  ClientSender.cpp  ClientSender.h  ClientSubject.h  DataProcessor.cpp  DataProcessor.h  InputProccesor.cpp  InputProccesor.h  Packet.h  Timer.h  main.cpp
